upgrade versão angular

--- a/angular.json
+++ b/angular.json
@@ -121,5 +121,8 @@
       }
     }
   },
-  "defaultProject": "angular.io-example"
+  "defaultProject": "angular.io-example",
+  "cli": {
+    "analytics": "734917fa-56c3-43a2-b242-ba2a54990505"
+  }
 }
